--- a/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
@@ -337,6 +337,114 @@
             </Setter>
         </Style>
 
+        <Style x:Key="HorizontalHamburgerMenu" TargetType="controls1:HamburgerMenu">
+            <Setter Property="HamburgerMenuTemplate">
+                <Setter.Value>
+                    <DataTemplate>
+                        <FontIcon FontFamily="Segoe MDL2 Assets"
+                                  FontSize="16"
+                                  Margin="16"
+                                  Glyph="&#xE700;" />
+                    </DataTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="IsTabStop" Value="False" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="controls1:HamburgerMenu">
+                        <Grid Background="{TemplateBinding PaneBackground}">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="48"></RowDefinition>
+                                <RowDefinition Height="*"></RowDefinition>
+                            </Grid.RowDefinitions>
+
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"></ColumnDefinition>
+                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                
+                                <ListView x:Name="ButtonsListView"
+                                          AutomationProperties.Name="Menu items"
+                                          IsItemClickEnabled="True"
+                                          ItemContainerStyle="{StaticResource HambugerMenuItemStyle}"
+                                          ItemTemplate="{TemplateBinding ItemTemplate}"
+                                          ItemTemplateSelector="{TemplateBinding ItemTemplateSelector}"
+                                          ItemsSource="{TemplateBinding ItemsSource}"
+                                          ScrollViewer.VerticalScrollBarVisibility="Auto"
+                                          SelectedIndex="{Binding SelectedIndex, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
+                                          SelectedItem="{Binding SelectedItem, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
+                                          SelectionMode="Single"
+                                          TabIndex="1">
+                                    <ListView.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <ItemsStackPanel Orientation="Horizontal"></ItemsStackPanel>
+                                        </ItemsPanelTemplate>
+                                    </ListView.ItemsPanel>
+                                </ListView>
+
+                                <Grid Grid.Column="1"
+                                              Height="40">
+                                    <Button Name="SearchButton"
+                                                    Padding="0"
+                                                    AutomationProperties.Name="Search button"
+                                                    Background="Transparent"
+                                                    BorderThickness="0"
+                                                    VerticalAlignment="Stretch"
+                                                    Visibility="{Binding ElementName=MainSplitView, Path=IsPaneOpen, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=True}"
+                                                    TabIndex="1">
+                                        <FontIcon FontFamily="Segoe MDL2 Assets"
+                                                          Margin="16,12"
+                                                          FontSize="16"
+                                                          Foreground="{TemplateBinding PaneForeground}"
+                                                          Glyph="&#xE721;"  />
+                                    </Button>
+                                    <AutoSuggestBox x:Name="SearchBox"
+                                                            QueryIcon="Find"
+                                                            Margin="5,0"
+                                                            IsTabStop="True"
+                                                            TabIndex="1"
+                                                            VerticalAlignment="Center"
+                                                            Visibility="{Binding ElementName=MainSplitView, Path=IsPaneOpen, Converter={StaticResource BoolToVisibilityConverter}}">
+                                    </AutoSuggestBox>
+                                </Grid>
+
+                                <ListView x:Name="OptionsListView"
+                                                  Grid.Column="2"
+                                                  Width="{TemplateBinding OpenPaneLength}"
+                                                  VerticalAlignment="Bottom"
+                                                  AutomationProperties.Name="Option items"
+                                                  IsItemClickEnabled="True"
+                                                  ItemContainerStyle="{StaticResource HambugerMenuItemStyle}"
+                                                  ItemTemplate="{TemplateBinding OptionsItemTemplate}"
+                                                  ItemTemplateSelector="{TemplateBinding OptionsItemTemplateSelector}"
+                                                  ItemsSource="{TemplateBinding OptionsItemsSource}"
+                                                  ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                                                  SelectedIndex="{Binding SelectedOptionsIndex, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
+                                                  SelectedItem="{Binding SelectedOptionsItem, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
+                                                  SelectionMode="Single"
+                                                  TabIndex="2">
+                                    <ListView.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <ItemsStackPanel Orientation="Horizontal"></ItemsStackPanel>
+                                        </ItemsPanelTemplate>
+                                    </ListView.ItemsPanel>
+                                </ListView>
+
+                            </Grid>
+
+                            <ContentPresenter x:Name="ContentPart"
+                                              Grid.Row="1"
+                                              AutomationProperties.Name="Content"
+                                              Content="{TemplateBinding Content}" />
+
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
     </Application.Resources>
 
 </Application>
