vertical scrollbar fix

--- a/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
@@ -863,7 +863,8 @@
                                                   ItemContainerStyle="{StaticResource VerticalHambugerMenuItemStyle}"
                                                   ItemTemplateSelector="{TemplateBinding ItemTemplateSelector}"
                                                   ItemsSource="{TemplateBinding ItemsSource}"
-                                                  ScrollViewer.VerticalScrollBarVisibility="Auto"
+                                                  ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                                                          ScrollViewer.VerticalScrollMode="Disabled"
                                                   SelectedIndex="{Binding SelectedIndex, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
                                                   SelectedItem="{Binding SelectedItem, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
                                                   SelectionMode="None"
@@ -882,6 +883,7 @@
                                                   ItemTemplateSelector="{TemplateBinding OptionsItemTemplateSelector}"
                                                   ItemsSource="{TemplateBinding OptionsItemsSource}"
                                                   ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                                                  ScrollViewer.VerticalScrollMode="Disabled"
                                                   SelectedIndex="{Binding SelectedOptionsIndex, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
                                                   SelectedItem="{Binding SelectedOptionsItem, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
                                                   SelectionMode="Single"
